# QLiteDialog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  QLiteDialogConfig.cmake.in  abstractbasedialog.h  baseanimation.cpp  baseanimation.h  basedialog.h  baseproperty.h  basewidget.cpp  basewidget.h  global.h  windowframelesshelper.cpp  windowframelesshelper.h
src/bean/: datadef.h
src/inner/: innerdialog.cpp  innerdialog.h  innerdialog_p.h
src/normal/: normaldialog.cpp  normaldialog.h
src/tip/: tipsdialog.cpp  tipsdialog.h  tipsmanager.cpp  tipsmanager.h
src/utils/: baseanimation.cpp  baseanimation.h  baseanimation_p.h  baseanimationproperty.h  windowframelesshelper.cpp  windowframelesshelper.h
src/weakhint/: weakhintdialog.cpp  weakhintdialog.h  weakhintdialog_p.h
test/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp
